part2/2.3/manifests/pingpong_dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: pingpong
  name: pingpong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      containers:
        - name: pingpong
          image: mobporo/pingpong:2.014
